final touches part 1

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img-1.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Govind Thakur</a></h1>
         <div class="social-links mt-3 text-center">
-          
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <span class="iconify" data-icon="" data-inline="false"></span>
+          <a href="https://github.com/Thakur-Govind" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.instagram.com/govind.thakur11/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=govind.thakur11@gmail.com" class="google"><i class="bx bxl-google"></i></a>
+          <a href="https://www.linkedin.com/in/govind-thakur-494a394a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -453,9 +453,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/vocab-test.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/sentiment-analysis.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/vocab-test.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="•	Sentiment Analysis of Reviews: Machine Learning using AWS - Created a sentiment analysis model made on RNNs, which predicts whether a review given to it is a positive or a negative one."><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/sentiment-analysis.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="•	Sentiment Analysis of Reviews: Machine Learning using AWS - Created a sentiment analysis model made on RNNs, which predicts whether a review given to it is a positive or a negative one."><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -501,11 +501,11 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/attendance-management.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/attendance-management.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MS Teams Attendance management using python - "><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/attendance-management.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MS Teams Attendance management using python - a python application built to maintain attendance records of lectures held on MS Teams"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -526,6 +526,16 @@
               <img src="assets/img/portfolio/kisaan-seva.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/kisaan-seva.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Kisaan Seva - A website made and deployed in the TSEC Hackathon, designed to help farmers use the commodity market in a better way"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/vocab-test.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/vocab-test.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Vocabulary Tester using google APIs - a quiz app that can be used to asses your vocabulary, add to the word list, or simply revise vocabulary seeing a random bunch of 5 words and their meanings"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -574,7 +584,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -599,7 +609,7 @@
                 <p>+91 7021302112</p>
               </div>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15078.169497584395!2d72.844332!3d19.1277217!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3ffccbbc87260c17!2sMayfair%20Meridian%20-%20Andheri!5e0!3m2!1sen!2sin!4v1622221360914!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15078.169497584395!2d72.844332!3d19.1277217!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3ffccbbc87260c17!2sMayfair%20Meridian%20-%20Andheri!5e0!3m2!1sen!2sin!4v1622221360914!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe></div>
 
           </div>
 
@@ -643,7 +653,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; <strong><span>Govind Thakur</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
