--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; <strong><span>Govind Thakur</span></strong>
+        &copy; <strong><span>Govind Thakur 2021</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
