--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img-1.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Govind Thakur</a></h1>
         <div class="social-links mt-3 text-center">
           <span class="iconify" data-icon="" data-inline="false"></span>
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Machine Learning Engineer &amp; Web Developer.</h3>
