--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/plagiarism-checker.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/plagiarism-checker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Plagiarism checker using Machine Learning and NL"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/plagiarism-checker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Plagiarism checker using Machine Learning and NLP"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -485,7 +485,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/covid-analysis.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/covid-analysis.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/covid-analysis.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Analysis of Covid-19 Data along with prediction of number of cases using RNNS"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
